--- a/02-spa/src/app/components/about/about.component.html
+++ b/02-spa/src/app/components/about/about.component.html
@@ -1,1 +1,5 @@
-<h1>sobre esto</h1>
+<h1 class="animated fadeIn fast">Sobre Comic App</h1>
+<hr>
+<p class="animated fadeIn">
+    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatem dolores ex fugit vitae modi commodi molestiae officiis animi? Sed repellat quam labore blanditiis a voluptates repellendus quos reprehenderit eum aliquid!
+</p>
