--- a/02-spa/src/app/components/heroes/heroes.component.html
+++ b/02-spa/src/app/components/heroes/heroes.component.html
@@ -1,15 +1,17 @@
 <h1>Heroes</h1> <small>Marvel y Dc</small>
 
 <div class="card-columns">
-    <div class="card">
-        <img src="assets/img/aquaman.png" class="card-img-top" alt="...">
-        <div class="card-body">
-            <h5 class="card-title">Card title</h5>
-            <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-            <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
-            <button type="button" class="btn btn-outline-primary btn-block">
-              Ver más...
+    <div class="card animated fadeIn fast" *ngFor="let heroe of heroes; let i = index">
+        <img [src]="heroe.img" class="card-img-top img-fluid" [alt]="heroe.nombre">
+        <div class="card-block">
+            <h5 class="card-title">{{ heroe.nombre }}</h5>
+            <p class="card-text">{{ heroe.bio }}</p>
+            <p class="card-text"><small class="text-muted">{{heroe.aparicion}}</small></p>
+
+            <button (click)="verHeroe(i)" type="button" class="btn btn-outline-primary btn-block">
+            Ver más... 
             </button>
+            <!--<a [routerLink]="['/heroe', i]" class="btn btn-outline-primary">Ver más link...</a>-->
         </div>
     </div>
 </div>
