--- a/02-spa/src/app/components/heroe/heroe.component.html
+++ b/02-spa/src/app/components/heroe/heroe.component.html
@@ -1,3 +1,22 @@
-<p>
-  heroe works!
-</p>
+<h1 class="animated fadeIn">{{heroe.nombre | uppercase}}</h1><small>({{heroe.aparicion | date:'y'}})</small>
+<hr>
+
+<div class="row" animated fadeIn fast>
+    <div class="col-md-4">
+        <img [src]="heroe.img" class="img-fluid" [alt]="heroe.nombre">
+        <br><br>
+        <a class="btn btn-outline-danger btn-block" [routerLink]="['/heroes']">Regresar</a>
+    </div>
+
+    <div class="col-md-8">
+        <h3>{{heroe.nombre}}</h3>
+        <hr>
+        <p>
+            {{heroe.bio}}
+        </p>
+        <div>
+            <img *ngIf="heroe.casa=='DC'" class="img-logo" src="assets/img/DC.jpg" alt="DC">
+            <img *ngIf="heroe.casa=='Marvel'" class="img-logo" src="assets/img/marvel.png" alt="Marvel">
+        </div>
+    </div>
+</div>
